--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Paxyifier/WTL-Prac-6#readme",
   "dependencies": {
+    "mysql": "^2.18.1",
     "readline-sync": "^1.4.10"
   }
 }
